# constellation

./: .clang-tidy  .codespellrc  .gitlab-ci.yml  REUSE.toml  demo1_log.sh  demo1_sat1.sh  demo1_sat2.sh  demo2_sat.sh  demo3_cntrl.sh  demo4_cntrl.sh  gcovr.cfg  meson.build  meson_options.txt  pyproject.toml
.reuse/: dep5
configs/: Redpitaya.toml
cxx/: meson.build
cxx/constellation/: meson.build
cxx/constellation/controller/: ConfigParser.cpp  ConfigParser.hpp  Controller.cpp  Controller.hpp  ControllerConfiguration.cpp  exceptions.hpp  meson.build
cxx/constellation/core/: meson.build
cxx/constellation/core/chirp/: BroadcastRecv.cpp  CHIRPListener.cpp  CHIRPListener.hpp  CHIRPManager.cpp  CHIRPManager.hpp  CHIRPService.hpp  CHIRPSocket.cpp  CHIRPSocket.hpp  Manager.cpp
cxx/constellation/core/config/: Configuration.tpp  Dictionary.cpp  Value.cpp  Value.hpp  exceptions.hpp
cxx/constellation/core/heartbeat/: HeartbeatManager.cpp  HeartbeatManager.hpp  HeartbeatRecv.hpp  HeartbeatSend.cpp
cxx/constellation/core/log/: CMDPSink.cpp  SinkManager.cpp  SinkManager.hpp
cxx/constellation/core/logging/: CMDPSink.cpp  CMDPSink.hpp  SinkManager.cpp  SinkManager.hpp
cxx/constellation/core/message/: BaseHeader.cpp  BaseHeader.hpp  CDTP1Message.hpp  CHIRP2Message.cpp  CHIRP2Message.hpp  CMDP1Message.hpp  Protocol.hpp  exceptions.hpp
cxx/constellation/core/networking/: asio_helpers.cpp  zmq_helpers.cpp
cxx/constellation/core/pools/: BasePool.hpp  BasePool.ipp  CMDPPool.cpp  CMDPPool.hpp  SubscriberPool.hpp  SubscriberPool.ipp
cxx/constellation/core/protocol/: CSCP_definitions.hpp
cxx/constellation/core/subscriber/: SubscriberPool.hpp  SubscriberPool.ipp
cxx/constellation/core/utils/: chrono.hpp  networking.hpp  string.hpp  timers.hpp  type.hpp
cxx/constellation/exec/: DSOLoader.cpp  meson.build  satellite.cpp  satellite.hpp
cxx/constellation/gui/: QCommandDialog.cpp  meson.build
cxx/constellation/satellite/: BaseSatellite.cpp  BaseSatellite.hpp  CommandRegistry.cpp  FSM.cpp  ReceiverSatellite.cpp  ReceiverSatellite.hpp  Satellite.cpp  Satellite.hpp  SatelliteImplementation.cpp  TransmitterSatellite.cpp  TransmitterSatellite.hpp
cxx/constellation/tools/: meson.build
cxx/listeners/: meson.build  protolisten.cpp  prototype_listener.cpp
cxx/satellites/: meson.build
cxx/satellites/KeysightScope/: KeysightScopeSatellite.cpp  KeysightScopeSatellite.hpp  meson.build
cxx/satellites/bttb12/: bttb12.cpp  bttb12.hpp  meson.build
cxx/satellites/prototype/: main.cpp  meson.build  prototype.cpp  prototype.hpp
cxx/tests/: dummy_satellite.hpp  meson.build  test_core_chirp_manager.cpp  test_core_chirp_message.cpp  test_core_logging.cpp  test_core_message.cpp  test_core_pools.cpp  test_satellite_data.cpp  test_satellite_fsm.cpp  test_satellite_implementation.cpp
cxx/tools/: chirp_manager.cpp  chp_receiver.cpp  chp_sender.cpp  config_parser.cpp  console_logger.cpp  dummy_controller.cpp  meson.build
docs/: .spelling_jargon.txt  .spelling_names.txt  Doxyfile  conf.py
docs/framework_reference/: index.md
docs/manual/: satellite.md
docs/protocols/: chp.md
docs/reference/: satellite.md
docs/satellites/: external_satellites.yaml
python/constellation/: chirp.py  config_redpitaya_measure_events_standard.yaml  meson.build  protocol.py  rpdevice.py  rpgamma.py  rpneutron.py  rpreceiver.py  rpsatellite.py  simplegui.py
python/constellation/satellites/RpDaq/: README.md  lib_mikroe_expand11.py  lib_mikroe_rtd.py  meson.build  rpgamma.py  rpneutron.py  rpsatellite.py
python/constellation/satellites/clabdaq2/: README.md  lib_mikroe_expand11.py  lib_mikroe_rtd.py  meson.build  read_data32.c  read_data32bit.c  rpgamma.py  rpneutron.py  rpsatellite.py
python/tests/: conftest.py  (+5 more)
subprojects/: .gitignore
(+71 files in other folders)
