# SPDX-FileCopyrightText: 2024 DESY and the Constellation authors
# SPDX-License-Identifier: CC0-1.0

rpdaq_files = files(
  'rpgamma.py',
  'rpneutron.py',
  'rpsatellite.py',
  'lib_mikroe_expand11.py',
  'lib_mikroe_rtd.py',
)

py.install_sources(rpdaq_files,
  subdir: 'constellation/satellites/RpDaq')
